--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,21 @@
 plugins {
-	id 'java'
 	id 'org.springframework.boot' version '3.3.3'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'java'
 }
 
 group = 'com.makersharks'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = '17'
 }
 
 repositories {
 	mavenCentral()
 }
+
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
@@ -32,6 +32,10 @@ tasks.named('test') {
 }
 
 tasks.withType(JavaCompile) {
-	options.compilerArgs += '-parameters'
+	options.compilerArgs += ['-parameters']
 }
+
+
+
+
 
